# ex

./: CMakeLists.txt
include/: add.h  path.h  path.h.in  ver.h.in  version.h
lib/lib_shar/: CMakeLists.txt
lib/lib_shar/include/: lib_shar.h
lib/lib_shar/src/: lib_shar.cpp
lib/lib_stat/: CMakeLists.txt
lib/lib_stat/include/: lib_stat.h
lib/lib_stat/src/: lib_stat.cpp
src/: CMakeLists.txt  add.cpp  main.cpp
